<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:padding="8dp">

        <FrameLayout
            android:id="@+id/layout_dhis_logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true">

            <org.hisp.dhis.android.dataentry.commons.ui.CircleView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:circle_radius="50dp"
                app:stroke_color="@android:color/white"
                app:stroke_width="@dimen/circle_stroke_width"/>

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/progress_bar_circular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"/>

            <org.hisp.dhis.android.dataentry.commons.ui.FontTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="74sp"
                app:font="@string/font_name_regular"/>

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/layout_login_views"
            android:layout_width="384dp"
            android:layout_height="384dp"
            android:layout_below="@id/layout_dhis_logo"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_edittext_server_url"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="8dp">

                    <org.hisp.dhis.android.dataentry.commons.ui.FontTextInputEditText
                        android:id="@+id/edittext_server_url"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/server_url"
                        android:inputType="textUri"
                        android:maxLines="1"
                        app:font="@string/font_name_regular"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_edittext_username"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="8dp">

                    <org.hisp.dhis.android.dataentry.commons.ui.FontTextInputEditText
                        android:id="@+id/edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:maxLines="1"
                        app:font="@string/font_name_regular"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="16dp">

                    <org.hisp.dhis.android.dataentry.commons.ui.FontTextInputEditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        app:font="@string/font_name_regular"/>
                </android.support.design.widget.TextInputLayout>

                <org.hisp.dhis.android.dataentry.commons.ui.FontButton
                    android:id="@+id/button_log_in"
                    android:layout_width="196dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_selector_accent"
                    android:text="@string/log_in"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    app:font="@string/font_name_medium"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>
